ingress-traefik-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kustomize.toolkit.fluxcd.io/checksum":"1fdb19094c36fbf9394472e7fcd9f31871c8cbce","traefik.ingress.kubernetes.io/router.entrypoints":"websecure"},"labels":{"kustomize.toolkit.fluxcd.io/name":"apps","kustomize.toolkit.fluxcd.io/namespace":"flux-system"},"name":"traefik-dashboard","namespace":"networking"},"spec":{"rules":[{"host":"traefik.efk8s.com","http":{"paths":[{"backend":{"service":{"name":"traefik","port [...]
    kustomize.toolkit.fluxcd.io/checksum: 1fdb19094c36fbf9394472e7fcd9f31871c8cbce
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  creationTimestamp: "2021-08-14T11:53:46Z"
  generation: 1
  labels:
    kustomize.toolkit.fluxcd.io/name: apps
    kustomize.toolkit.fluxcd.io/namespace: flux-system
  name: traefik-dashboard
  namespace: networking
  resourceVersion: "2271058"
  uid: a234e6e5-8aae-4c75-8ea7-2f74ca0b3f36
spec:
  ingressClassName: "traefik"
  rules:
  - host: traefik.efk8s.com
    http:
      paths:
      - backend:
          service:
            name: traefik
            port:
              number: 9000
        path: /
        pathType: Prefix
  tls:
  - secretName: efk8s-com-tls
status:
  loadBalancer: {}
